# ardupilot_gazebo

./: CMakeLists.txt
cmake/: 50_sitl_gazebo_setup.sh.in  EnableC++XX.cmake  FindGStreamer.cmake  FindMAVLink.cmake  FindTinyXML.cmake  UnitTests.cmake
include/: common.h  gazebo_barometer_plugin.h  gazebo_geotagged_images_plugin.h  gazebo_gimbal_controller_plugin.hh  gazebo_gps_plugin.h  gazebo_imu_plugin.h  gazebo_lidar_plugin.h  gazebo_magnetometer_plugin.h  gazebo_mavlink_interface.h  gazebo_multirotor_base_plugin.h  geo_mag_declination.h
models/sicdrone/: model.config  sicdrone.sdf
models/sicdrone/meshes/: sic_gimbal_pitch.stl
models/sicdrone_ardupilot/: model.config  sicdrone.sdf
models/sicdrone_ardupilot/meshes/: sic_gimbal_yaw.stl  sic_prop_generic.stl  sic_tilt_arm.stl
src/: ArduPilotPlugin.cc  gazebo_barometer_plugin.cpp  gazebo_geotagged_images_plugin.cpp  gazebo_gimbal_controller_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_lidar_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_multirotor_base_plugin.cpp  geo_mag_declination.cpp
worlds/: sicdrone_ardupilot.world
